--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -45,13 +45,7 @@
             <button class='close-modal'>Fechar</button>
           </div>
         </div>
-
-        <div class="utils">
-          <label class="switch">
-            <input type="checkbox" />
-            <span class="slider"></span>
-          </label>
-        </div>
+        <div id="utils"></div>
       </nav>
     </header>
     <main class="content">
