--- a/pages/static/css/home.css
+++ b/pages/static/css/home.css
@@ -74,13 +74,13 @@ input[type="file"] {
 .modal-container {
   position: fixed;
   top: 10px;
-  left: 950px;
+  left: 900px;
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25);
   padding: 20px;
-  width: 500px;
-  max-height: 70vh;
+  width: 600px;
+  height: 600px;
   display: none;
   flex-direction: column;
   font-family: "Roboto", sans-serif;
@@ -92,41 +92,41 @@ input[type="file"] {
 }
 
 .modal-itens {
-  flex: 1;             
+  flex: 1;
+  height: 100%;             
   overflow-y: auto;     
-  max-height: 50vh;     
-  margin-bottom: 15px;  
-}
-
-.modal-itens {
-  max-height: 50vh;
+  margin-bottom: 15px;
   overflow-y: auto;
   margin-top: 10px;
   padding-right: 10px;
 }
 
-.modal-itens ul.notifications {
-  max-height: 300px;
-  overflow-y: auto;
+
+.modal-itens ul{
+
   margin: 5px 0 15px 0;
-  padding-right: 8px;
+  padding: 8px;
   border: 1px solid #ddd;
   border-radius: 6px;
-}
-
-
-.notifications li {
-  margin-bottom: 10px;
 }
 
 .notifications {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  align-items: start;
   font-family: "Roboto", sans-serif;
   color: #262626;
   font-size: 15px;
+}
+
+.notifications li {
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
+.notifications li:hover{
+  color: #00579b;
 }
 
 .close-modal {
