--- a/pages/static/css/profile.css
+++ b/pages/static/css/profile.css
@@ -103,7 +103,7 @@
   box-shadow: 0px 0px 3px #262626;
 }
 
-.utils {
+#utils {
   display: flex;
   justify-content: center;
   align-items: center;
