--- a/pages/templates/pages/updateContracts.html
+++ b/pages/templates/pages/updateContracts.html
@@ -32,14 +32,15 @@
         <div>
           <ul class="services-list">
             <li>
-              <a class="upload-label" href="{% url 'contract_page' %}">REGISTRE SEU CONTRATO</a>
+              <a class="register" href="{% url 'contract_page' %}">REGISTRE SEU CONTRATO</a>
             </li>
             <span>|</span>
             <li class="services-item active">Atualizar Contratos</li>
             <span>|</span>
             <li class="services-item notification">Notificações</li>
           </ul>
-            <div class="modal-container">
+
+          <div class="modal-container">
             <h3>Notificações</h3>
             <div class="modal-itens">
               <p><strong>Contratos a vencer:</strong></p>
@@ -71,17 +72,6 @@
                 {% empty %}
                 <li>Nenhum contrato vencido.</li>
                 {% endfor %}
-              </ul>
-            </div>
-            <button class="close-modal">Fechar</button>
-          </div>
-
-          <div class="modal-container">
-            <h3>Notificações</h3>
-            <div class="modal-itens">
-              <ul class="notifications">
-                <li>Contratos a vencer</li>
-                <li>Contratos vencidos</li>
               </ul>
             </div>
             <button class="close-modal">Fechar</button>
